"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-01-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-42:
	  Added channel_data_dumper functor class for printing, 
		analogous to channel_data_reader for extraction.  
	  Added virtual datatype_definition_base::dump_channel_field_iterate()
		to print out data in formatted fashion from channel fields.  
	  Implemented instance_reference::lookup_top_level_reference
		returning a global_indexed_reference (type-enum, index)-pair.
	  parser/instref.cc: implemented parser::parse_global_reference, 
		to lookup a string into a global_indexed_reference.  
	  chpsim: new command 'get' to print value of any instance or 
		state of any channel.  
	  Added new test cases to demonstrate chpsim:'get'.  


	* HACKT-00-01-04-main-00-80-63-chpsim-01-41:
	  Now decrement predecessor countdowns properly upon event execution, 
		using new helper functor EventNode::countdown_decrementer.
	  Class clean-ups: nonmeta_context, CHPSIM::State
		better member privatization and member forwarding.  
	  No new test cases this round, but coming next.


	* HACKT-00-01-04-main-00-80-63-chpsim-01-40:
	  Committed development switches USE_NONMETA_RESOLVE and
		ENABLE_CHPSIM_EXECUTE.  
	  Next: fix countdown (forgot to decrement), should be done in 
		CHP::action::execute().
	  Let the flood of test-cases begin!


2007-01-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-39:
	  Minor patch: cleaned up CHPSIM_EVENT_GUARDED, CHPSIM_DIRECT_ENQUEUE.


	* HACKT-00-01-04-main-00-80-63-chpsim-01-38:
	  Oh, joy! successfully simulated a source-sink pair in chpsim!
	  chpsim::EventNode: no longer carries a guard-expression with it, 
		greatly simplifying things.  (1 regression test updated)
	  CHP::acion::execute: